--- a/poudre-dashboard-ng/src/app/map/map.component.html
+++ b/poudre-dashboard-ng/src/app/map/map.component.html
@@ -1,1 +1,10 @@
+<head>
+  <!-- Include css files and a favicon icon -->
+  <link rel="stylesheet" href="../../assets/leaflet/css/leaflet.css" />
+  <link rel="stylesheet" href="../../assets/leaflet/css/style1.css"/>
+  <link rel="stylesheet" href="../../assets/leaflet/css/leaflet.zoomhome.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../assets/leaflet/css/L.Control.MousePosition.css"/>
+</head>
+
 <div id="mapid"></div>
