--- a/poudre-dashboard-ng/src/app/map/map.component.html
+++ b/poudre-dashboard-ng/src/app/map/map.component.html
@@ -1,3 +1,5 @@
+
+
 <head>
   <!-- Include css files and a favicon icon -->
   <link rel="stylesheet" href="../../assets/leaflet/css/leaflet.css" />
@@ -7,4 +9,15 @@
   <link rel="stylesheet" href="../../assets/leaflet/css/L.Control.MousePosition.css"/>
 </head>
 
-<div id="mapid"></div>
+<div id="main">
+
+  <div id="sidebar">
+    <p>Layers:</p>
+
+  </div>
+
+  <div id="map">
+    <div id="mapid"></div>
+  </div>
+
+</div>
