--- a/poudre-dashboard-ng/src/styles.css
+++ b/poudre-dashboard-ng/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 body{
-	font-family: Helvetica Neue,Helvetica,Arial,sans-serif; 
+	overflow-y: hidden;
+	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 	color: #5e5b64;
     background-image: url(assets/img/background.png);
     background-repeat: repeat-x;
