updated visual components

--- a/poudre-dashboard-ng/src/app/map/map.component.html
+++ b/poudre-dashboard-ng/src/app/map/map.component.html
@@ -7,4 +7,6 @@
   <link rel="stylesheet" href="../../assets/leaflet/css/L.Control.MousePosition.css"/>
 </head>
 
-<div id="mapid"></div>
+<div id="map-container">
+  <div id="mapid"></div>
+</div>
