--- a/poudre-dashboard-ng/src/app/home/home.component.css
+++ b/poudre-dashboard-ng/src/app/home/home.component.css
@@ -1,9 +1,19 @@
-h1 {
-    color: black;
-    text-align: center;
-    vertical-align: middle;
+.container{
+    margin-top: 100px;
 }
 
-.text {
+h1 {
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    margin:10px;
+}
+
+p {
+    color: white;
+    font-size: 20px;
+}
+
+.centered {
     line-height:93vh;
 }
