--- a/poudre-dashboard-ng/src/app/home/home.component.html
+++ b/poudre-dashboard-ng/src/app/home/home.component.html
@@ -1,3 +1,20 @@
 <div class="container">
-  <app-map></app-map>
+  <h1>Poudre River Dashboard (Prototype)</h1>
+  <p>
+    The Open Water Foundation is in the process of developing
+    a web-based Poudre Basin Information
+    Platform that will provide access to cross-jurisdictional 
+    datasets for the Poudre Basin,
+    integrating datasets from various entities in the basin and providing links to datasets.
+  </p>
+  <p>
+    This site will contain different spatial visualizaions, for example maps 
+    developed using leaflet with various layers to help better understand data 
+    collected as it relates to the Poudre Basin.
+  </p>
+  <p>
+    Users can select different kinds of data types using the tabs in the 
+    navigation bar of this site and see different maps with different data 
+    sets.
+  </p>
 </div>
