--- a/poudre-dashboard-ng/src/app/map/map.component.css
+++ b/poudre-dashboard-ng/src/app/map/map.component.css
@@ -1,1 +1,12 @@
-#mapid { height: 180px; }
+#mapid {
+    position: absolute;
+    width:100%!important;
+    height:100%!important;
+}
+
+#map-container {
+    position: relative;
+    float: right;
+    width:80%;
+    height:94vh;
+}
