--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand navbar-light" style="background-color: #6A8E7F;">
-  <a class="navbar-brand" href="#">Poudre Basin Information</a>
+<nav class="navbar navbar-expand navbar-light">
+  <a class="navbar-brand" href="#"> Poudre Basin Information</a>
   <!-- Hamburger Icon -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -21,6 +21,9 @@
       <li class="nav-item activate .ml-auto">
         <a class="nav-link" routerLink="/map">Future Planning</a>
       </li>
+      <li class="nav-item activate .ml-auto">
+          <a class="nav-link" href="http://openwaterfoundation.org" title="OWF home page" target="_blank"><img src="assets/img/OWF-Logo-Favicon-32x32.png"/></a>
+        </li>
     </ul>
   </div>
 </nav>
