--- a/poudre-dashboard-ng/src/styles.css
+++ b/poudre-dashboard-ng/src/styles.css
@@ -4,7 +4,6 @@ body{
 	overflow-y: hidden;
 	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 	color: #5e5b64;
-    background-image: url(assets/img/background.png);
-    background-repeat: repeat-x;
-    background-color: #eee;
+    background-color: #fafafa;
+    font-family: Trebuchet MS,Helvetica,sans-serif!important;
 }
