updated the homepage contents

--- a/poudre-dashboard-ng/src/app/home/home.component.html
+++ b/poudre-dashboard-ng/src/app/home/home.component.html
@@ -10,13 +10,11 @@
   </p>
   <p>
     This site will contain different spatial visualizaions, for example maps 
-    developed using leaflet with various layers to help better understand data 
-    collected as it relates to the Poudre Basin.
+    with various layers to provide content and data 
+    for the Poudre Basin.
   </p>
   <p>
-    Users can select different kinds of data types using the tabs in the 
-    navigation bar of this site and see different maps with different data 
-    sets.
+    Use the navigation bar at the top to select maps.
   </p>
 </div>
 <!-- =======
