--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.css
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.css
@@ -7,6 +7,17 @@
     color: black;
 }
 
+.navbar 
+a.dropdown-item {
+    padding-left:5px;
+}
+
+.navbar 
+a.dropdown-item 
+img {
+    margin-right:5px;
+}
+
 .navbar {
     border-top: 5px solid #9DB66B;
     border-bottom: 5px solid #E9EAEE;
