--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
@@ -1,39 +1,39 @@
 <nav class="navbar navbar-expand navbar-light">
-  <a class="navbar-brand" href="#"> Poudre Basin Information</a>
-  <!-- Hamburger Icon -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item activate .ml-auto" (click)="tabSelected($event)">
-        <a class="nav-link" routerLink="/map">Basin Entities</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="/map" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-          (click)="tabSelected($event)">
-          Current Conditions
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item active" routerLink="/map" (click)="dropdownItemSelected($event)"><img src="{{mapIcon}}"/>Boating</a>
-          <a class="dropdown-item" routerLink="/map" (click)="dropdownItemSelected($event)"><img src="{{mapIcon}}"/>Fishing</a>
-          <a class="dropdown-item" routerLink="/map" (click)="dropdownItemSelected($event)"><img src="{{mapIcon}}"/>Environmental Flows</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="http://snodas.cdss.state.co.us/app/index.html" target="_blank"><img src="{{externalLinkIcon}}"/>SNODAS</a>
-        </div>
-      </li>
-      <li class="nav-item activate .ml-auto" (click)="tabSelected($event)">
-        <a class="nav-link" routerLink="/map">Seasonal Outlook</a>
-      </li>
-      <li class="nav-item activate .ml-auto" (click)="tabItemSelected($event)">
-        <a class="nav-link" routerLink="/map">Historical Data</a>
-      </li>
-      <li class="nav-item activate .ml-auto" (click)="tabSelected($event)">
-        <a class="nav-link" routerLink="/map">Future Planning</a>
-      </li>
-      <li class="nav-item activate .ml-auto">
-          <a class="nav-link" href="http://openwaterfoundation.org" title="OWF home page" target="_blank"><img src="assets/img/OWF-Logo-Favicon-32x32.png"/></a>
+    <a class="navbar-brand" href="#"> Poudre Basin Information</a>
+    <!-- Hamburger Icon -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item activate .ml-auto">
+          <a class="nav-link" routerLink="/map">Basin Entities</a>
         </li>
-    </ul>
-  </div>
-</nav>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="/map" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <!-- (click)="selectedTab()" -->
+            Current Conditions
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item"><img src="{{mapIcon}}"/>Boating</a>
+            <a class="dropdown-item" href="/map"><img src="{{mapIcon}}"/>Fishing</a>
+            <a class="dropdown-item" href="/map"><img src="{{mapIcon}}"/>Environmental Flows</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="http://snodas.cdss.state.co.us/app/index.html" target="_blank"><img src="{{externalLinkIcon}}"/>External Link - SNODAS</a>
+          </div>
+        </li>
+        <li class="nav-item activate .ml-auto">
+          <a class="nav-link" routerLink="/map">Seasonal Outlook</a>
+        </li>
+        <li class="nav-item activate .ml-auto">
+          <a class="nav-link" routerLink="/map">Historical Data</a>
+        </li>
+        <li class="nav-item activate .ml-auto">
+          <a class="nav-link" routerLink="/map">Future Planning</a>
+        </li>
+        <li class="nav-item activate .ml-auto">
+            <a class="nav-link" href="http://openwaterfoundation.org" title="OWF home page" target="_blank"><img src="assets/img/OWF-Logo-Favicon-32x32.png"/></a>
+          </li>
+      </ul>
+    </div>
+  </nav>
