fixed issue with linking to map pages

--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
@@ -16,10 +16,10 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item"><img src="{{mapIcon}}"/>Boating</a>
-            <a class="dropdown-item" href="/map"><img src="{{mapIcon}}"/>Fishing</a>
-            <a class="dropdown-item" href="/map"><img src="{{mapIcon}}"/>Environmental Flows</a>
+            <a class="dropdown-item" routerLink="/map"><img src="{{mapIcon}}"/>Fishing</a>
+            <a class="dropdown-item" routerLink="/map"><img src="{{mapIcon}}"/>Environmental Flows</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="http://snodas.cdss.state.co.us/app/index.html" target="_blank"><img src="{{externalLinkIcon}}"/>External Link - SNODAS</a>
+            <a class="dropdown-item" routerLink="http://snodas.cdss.state.co.us/app/index.html" target="_blank"><img src="{{externalLinkIcon}}"/>External Link - SNODAS</a>
           </div>
         </li>
         <li class="nav-item activate .ml-auto">
