--- a/poudre-dashboard-ng/src/app/map/map.component.html
+++ b/poudre-dashboard-ng/src/app/map/map.component.html
@@ -1,28 +1,67 @@
 
 
-<head>
-  <!-- Include css files and a favicon icon -->
-  <link rel="stylesheet" href="../../assets/leaflet/css/leaflet.css" />
-  <link rel="stylesheet" href="../../assets/leaflet/css/style1.css"/>
-  <link rel="stylesheet" href="../../assets/leaflet/css/leaflet.zoomhome.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../../assets/leaflet/css/L.Control.MousePosition.css"/>
-</head>
-
-<!-- <<<<<<< HEAD -->
 <div id="map-container">
+
+  <!-- optionally define the sidebar content via HTML markup -->
+    <div id="sidebar" class="leaflet-sidebar collapsed">
+
+        <!-- nav tabs -->
+        <div class="leaflet-sidebar-tabs">
+            <!-- top aligned tabs -->
+            <ul role="tablist">
+                <li><a href="#home" role="tab"><i class="fa fa-bars active"></i></a></li>
+                <li><a href="#autopan" role="tab"><i class="fa fa-arrows"></i></a></li>
+            </ul>
+
+            <!-- bottom aligned tabs -->
+            <ul role="tablist">
+                <li><a href="https://github.com/nickpeihl/leaflet-sidebar-v2"><i class="fa fa-github"></i></a></li>
+            </ul>
+        </div>
+
+        <!-- panel content -->
+        <div class="leaflet-sidebar-content">
+            <div class="leaflet-sidebar-pane" id="home">
+                <h1 class="leaflet-sidebar-header">
+                    sidebar-v2
+                    <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
+                </h1>
+
+                <br>
+                <p><button (click)="togglePoints()">Display Layer</button><button (click)="togglePoints()">Hide Layer</button></p>
+
+                <p>A responsive sidebar for the mapping library <a href="http://leafletjs.com/">Leaflet</a>.</p>
+                <p>Compatible with version 0.7 and 1.x (tested up to 1.2.0)</p>
+                <p><b>Select the other panes for a showcase of each feature.</b></p>
+
+                <h2>More examples</h2>
+                <ul>
+                    <li><a href="./position-right.html">Right aligned</a></li>
+                    <li><a href="./halfheight.html">The sidebar adapts to map container size</a></li>
+                    <li><a href="./leaflet-latest.html">Proof that it works with the latest leaflet version (if not, please report it!)</a></li>
+                    <li><a href="./leaflet-0.7.html">Proof that it works with leaflet 0.7</a></li>
+                </ul>
+            </div>
+
+            <div class="leaflet-sidebar-pane" id="autopan">
+                <h1 class="leaflet-sidebar-header">
+                    autopan
+                    <span class="leaflet-sidebar-close"><i class="fa fa-caret-left"></i></span>
+                </h1>
+                <p>
+                    <code>Leaflet.control.sidebar( autopan: true )</code>
+                    makes sure that the map center always stays visible.
+                </p>
+                <p>
+                    The autopan behviour is responsive as well.
+                    Try opening and closing the sidebar from this pane!
+                </p>
+            </div>
+
+        </div>
+    </div>
+
+
   <div id="mapid"></div>
-<!-- =======
-<div id="main">
 
-  <div id="sidebar">
-    <p>Layers:</p>
-
-  </div>
-
-  <div id="map">
-    <div id="mapid"></div>
-  </div>
-
->>>>>>> master -->
 </div>
