--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.css
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.css
@@ -7,13 +7,19 @@
     color: black;
 }
 
-.navbar 
+.navbar
 a.dropdown-item {
     padding-left:5px;
 }
 
-.navbar 
-a.dropdown-item 
+.navbar
+a.spacer
+{
+  width: 80px;
+}
+
+.navbar
+a.dropdown-item
 img {
     margin-right:5px;
 }
