Updated the menu config to be more complete, issue #19
I also updated the html files with narrative content.

--- a/poudre-dashboard-ng/src/app/about/about.component.html
+++ b/poudre-dashboard-ng/src/app/about/about.component.html
@@ -1,15 +1,21 @@
 <!-- <<<<<<< HEAD -->
 <div class="container">
-  <h1>The Poudre River Dashboard Project</h1>
+  <h1>The Poudre Basin Information Portal Project</h1>
   <br>
   <p>
-    The Open Water Foundation (OWF) is a nonprofit social enterprise that is working to provide an open source software platform to help organizations make better decisions about water. With increasing population, demand for water is increasing, resulting in negative impacts. In particular, water issues in the Western United States and other arid regions increasingly will influence decisions about the economy, environment, and society.  OWF was formed to apply an open source software business model to water resource software, so that organizations have well-maintained tools to address important water problems. Every organization wants to base decisions on data and science yet it is cost prohibitive for any one organization to develop the needed software tools. Government funding and research has produced useful software, but with budget and staffing issues, we cannot rely on government agencies or short-term investment to develop and maintain software tools. Instead, OWF is leading the effort to collaboratively develop, enhance, and maintain open source water resource software tools, to the benefit of government, universities, consultants, nonprofits, and the public.
+  The <a href="http://openwaterfoundation.org" target="_blank">Open Water Foundation (OWF)</a> is a nonprofit social enterprise that develops open source
+    software and open data solutions to make better decisions about water.
   </p>
   <p>
-    This web dashboard is intended to be a web-based Poudre Basin Information Platform that will provide access to cross-jurisdictional datasets for the Poudre Basin, integrating datasets from various entities in the basin and providing links to datasets.
+    The Poudre Basin Information Portal project provides access to cross-jurisdictional datasets and visualizations for the Poudre Basin,
+    integrating datasets from various entities in the basin and providing links to additional datasets and resources.
+    The information is intended to provide context for historical, current, and future conditions so that
+    residents and decision-makers in the basin can better understand the sometimes complex relationships between water-related topics.
   </p>
   <p>
-    This site will contain different spatial visualizaions, for example maps developed using leaflet with various layers to help better understand data collected as it relates to the Poudre Basin.
+  <b>This website is under development.  It is intended to support the
+  <a href="http://prti.colostate.edu/" target="_blank">Poudre Runs Through It</a> members,
+  major water users in the basin, and the public.</b>
   </p>
 </div>
 <!-- =======
