--- a/poudre-dashboard-ng/src/app/home/home.component.html
+++ b/poudre-dashboard-ng/src/app/home/home.component.html
@@ -1,20 +1,23 @@
 <!-- <<<<<<< HEAD -->
 <div class="container">
-  <h1>Poudre River Dashboard (Prototype)</h1>
+  <h1>Poudre Basin Information Portal (prototype)</h1>
   <p>
-    The Open Water Foundation is in the process of developing
-    a web-based Poudre Basin Information
-    Platform that will provide access to cross-jurisdictional
-    datasets for the Poudre Basin,
-    integrating datasets from various entities in the basin and providing links to datasets.
+  The <a href="http://openwaterfoundation.org" target="_blank">Open Water Foundation (OWF)</a>
+    is in the process of developing this website
+    to provide access to cross-jurisdictional datasets for the Poudre Basin,
+    to understand Poudre Basin water resources issues for different temporal and spatial extents that
+    support decision-making.
   </p>
   <p>
-    This site will contain different spatial visualizaions, for example maps
-    with various layers to provide content and data
-    for the Poudre Basin.
+    The same topic (e.g., streamflow) may be represented in multiple menus and maps,
+    each with a different perspective.
+    Standard visualization tools such as maps and graphs are being implemented
+    to provide simple access to data and information.
+    The website design leans toward simple maps, each with a few related layers,
+    rather than a single map with many layers.
   </p>
   <p>
-    Use the navigation bar at the top to select maps.
+    Use the navigation bar at the top to select maps, visualizations, and other products.
   </p>
 </div>
 <!-- =======
