--- a/poudre-dashboard-ng/src/app/map/map.component.css
+++ b/poudre-dashboard-ng/src/app/map/map.component.css
@@ -11,6 +11,152 @@
     width:100%;
     height: calc(100vh - 66px);
 }
+
+#toggleAll {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+#toggleDescriptions {
+  width: 100%;
+}
+
+#controlDescription {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+
+
+.toggleAllButton {
+  display:inline-block;
+  padding:0.35em 1.2em;
+  margin:0 0.3em 0.3em 0;
+
+  border-radius: 2px;
+  border-style: solid;
+  border-color: #9DB66B;
+
+  text-decoration:none;
+  font-size: 14px;
+  font-weight:300;
+
+  background-color: #9DB66B;
+  color: white;
+
+  text-align:center;
+}
+
+.toggleAllButton:hover {
+  cursor: pointer;
+  background-color: white;
+  color: #9DB66B;
+  border-style: solid;
+  border-color: #9DB66B;
+  box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
+}
+
+
+
+.controlCol {
+  text-align: center;
+  width: 50%;
+}
+
+table.layerOptions {
+  width: 100%;
+}
+table.layerOptions th {
+  padding: 5px;
+}
+table.layerOptions td.toggle {
+  vertical-align: top;
+  text-align: right;
+  padding: 5px;
+  border-style: none;
+}
+table.layerOptions td.name {
+  text-align: left;
+  font-weight: bold;
+  padding: 5px;
+  border-style: none;
+}
+table.layerOptions td.name .description {
+  margin-top: 8px;
+  font-weight: normal;
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 45px;
+  height: 24px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "|";
+  font-size: 12px;
+  text-align: center;
+  font-family: arial;
+
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+content: "O";
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+
+
+
+
 /* =======
 #main {
   display: flex;
