pushing recent edits with configurable map

--- a/poudre-dashboard-ng/src/app/map/map.component.css
+++ b/poudre-dashboard-ng/src/app/map/map.component.css
@@ -147,3 +147,12 @@ content: "O";
 .slider.round:before {
   border-radius: 50%;
 }
+
+.map-title {
+  padding: 6px 8px;
+  font: 14px/16px Arial, Helvetica, sans-serif;
+  background: #DCDCDC;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  height:100px;
+}
