--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.css
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.css
@@ -7,25 +7,25 @@
     color: black;
 }
 
-.navbar
-a.dropdown-item {
-    padding-left:5px;
-}
-
-.navbar
-a.spacer
-{
-  width: 80px;
-}
-
-.navbar
-a.dropdown-item
-img {
-    margin-right:5px;
-}
-
 .navbar {
     border-top: 5px solid #9DB66B;
     border-bottom: 5px solid #E9EAEE;
     background-color: #ffffff;
+}
+
+.navbar-brand {
+    padding: 8px !important;
+    padding-bottom: 10px !important;
+}
+
+.right-item {
+    padding: 8px !important;
+}
+
+a.nav-link {
+    padding: 0px !important;
+}
+
+#about-the-project{
+    padding-top:5px !important;
 }
