--- a/poudre-dashboard-ng/src/app/map-components/map.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.css
@@ -9,7 +9,7 @@
     position: relative;
     float: right;
     width:100%;
-    height: calc(100vh - 66px);
+    height: calc(100vh - 74px);
 }
 
 #errorPage {
@@ -72,4 +72,87 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   border-radius: 5px;
   height:100px;
+}
+
+/* animation tools */
+.slidercontainer { 
+	padding: 5px 2px;
+	font: 14px/20px Arial, Helvetica, sans-serif; 
+	background: white;  
+	box-shadow: 0 0 15px rgba(0,0,0,0.2); 
+	border-radius: 5px; 
+	width:590px;
+	margin-bottom:25px!important;
+} 
+.slidercontainer h4 { 
+	margin: 5px 0; 
+	color: black; 
+}
+
+/* Styling for actual slider */
+.timeslider{
+	float:left;
+	margin-left: 10px;
+	display:inline-block;
+	width: 45% !important;
+}
+.slider {
+	-webkit-appearance: none;
+	height: 10px;   
+	background: white;
+	border: 1px solid #a5a5a5;
+	outline: none;
+	opacity: 0.7;
+	-webkit-transition: .2s;
+	transition: opacity .2s;
+	margin-top:8px;
+}
+.slider::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: 10px;
+	height: 25px;
+	border-radius: 2px;
+	border:1px solid #a5a5a5;
+	background: #ddd;
+	cursor: pointer;
+}
+.slider::-moz-range-thumb {
+	width: 25px;
+	height: 25px;
+	border-radius: 2px;
+	background: #ddd;
+	border:1px solid #a5a5a5;
+	cursor: pointer;
+}
+
+/* Styling for speed slider */
+.speedslider{
+	float:left;
+	margin-left: 10px;
+	display:inline-block;
+	width: 50px !important;
+}
+
+/* This styling makes it possible for the color
+to change gradually when editing the choropleth map */
+.leaflet-container path{ 
+	transition: d, fill .75s !important;
+}
+
+/* Styling for buttons next to slider */
+button {
+	float:left;
+	display:inline-block;
+}
+.btn{
+	padding-top:0px!important;
+	padding-bottom:0px!important;
+	border-radius: 0px;
+	background: white;
+	margin-left:2px;
+	margin-right:2px;
+}
+.btn:hover{
+	background:#ccc;
 }
