adjusted sidebar layers ui

--- a/poudre-dashboard-ng/src/app/map-components/layer/layer.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/layer/layer.component.html
@@ -9,7 +9,7 @@
     <td class="toggle">
       <label class="switch">
 
-        <input type="checkbox" checked (click)="toggleLayer()">
+        <input id="{{data.geolayerId}}-slider" type="checkbox" checked (click)="toggleLayer()">
         <span class="slider round"></span>
       </label>
     </td>
