--- a/poudre-dashboard-ng/src/app/map-components/animation-tools/animation-tools.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/animation-tools/animation-tools.component.html
@@ -1,4 +1,4 @@
-<div class="slidercontainer">
+<!-- <div class="slidercontainer">
   <button type="button" id="back" class="backButton btn btn-default btn-xs onclick='backFunction()'">
     <i class="fa fa-backward" style="padding:0px;"></i>
   </button>
@@ -12,4 +12,4 @@
   <input type="range" min="{{minYear}}" max="{{maxYear}}" value="{{currYear}}" class="timeslider slider" id="timeslider" oninput="timeSliderHelper(this.value)"/>
   <p style="float:left; display:inline-block; margin:0px; margin-top:3px; padding-left:5px;"> Speed: </p>
   <input type="range" min="0" max="100" value="75" class="speedslider slider" id="speedslider" oninput="setSpeedFunction(this.value)"/>
-</div>
+</div> -->
