popups can now take a range of property values as string

--- a/poudre-dashboard-ng/src/app/map-components/map-error/map-error.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map-error/map-error.component.css
@@ -3,3 +3,14 @@
     text-align: center;
     margin-top: 100px;
   }
+
+h1 {
+  font-size:5rem !important;
+}
+
+.content {
+    margin-left: 25%;
+}
+.content p {
+  margin-bottom: 5px;
+} 
