fixed issue with adding and removing layers

--- a/poudre-dashboard-ng/src/app/map-components/layer/layer.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/layer/layer.component.html
@@ -9,7 +9,7 @@
     <td class="toggle">
       <label class="switch">
 
-        <input id="{{data.geolayerId}}-slider" type="checkbox" checked (click)="toggleLayer()">
+        <input id="{{data.geolayerId}}-slider" type="checkbox" checked (click)="toggleLayer()" checked="checked">
         <span class="slider round"></span>
       </label>
     </td>
