--- a/poudre-dashboard-ng/src/app/map-components/map.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.css
@@ -60,11 +60,6 @@
   box-shadow: 0px 3px 3px rgba(0,0,0,0.2);
 }
 
-.controlCol {
-  text-align: center;
-  width: 50%;
-}
-
 .map-title {
   padding: 6px 8px;
   font: 14px/16px Arial, Helvetica, sans-serif;
@@ -90,7 +85,7 @@
 }
 
 /* Styling for actual slider */
-.timeslider{
+/* .timeslider{
 	float:left;
 	margin-left: 10px;
 	display:inline-block;
@@ -124,24 +119,24 @@
 	background: #ddd;
 	border:1px solid #a5a5a5;
 	cursor: pointer;
-}
+} */
 
 /* Styling for speed slider */
-.speedslider{
+/* .speedslider{
 	float:left;
 	margin-left: 10px;
 	display:inline-block;
-	width: 50px !important;
-}
+	width: 50px !important; 
+}*/
 
 /* This styling makes it possible for the color
 to change gradually when editing the choropleth map */
-.leaflet-container path{ 
+/* .leaflet-container path{ 
 	transition: d, fill .75s !important;
-}
+} */
 
 /* Styling for buttons next to slider */
-button {
+/* button {
 	float:left;
 	display:inline-block;
 }
@@ -155,4 +150,4 @@ button {
 }
 .btn:hover{
 	background:#ccc;
-}
+} */
