restructured how some .js and .css files are included in the project to better match angular standards

--- a/poudre-dashboard-ng/src/app/map-components/map.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.css
@@ -32,6 +32,42 @@
   margin-bottom: 10px;
 }
 
+header h1 {
+	text-align: center;
+}
+
+.info {
+	padding: 6px 8px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: white;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+}
+
+.info-info {
+	padding: 6px 8px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: white;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+	height: 100px;
+	width: 150px;
+}
+
+.info-info h4 {
+	margin: 0 0 5px;
+	color: black;
+}
+
+.info h4 {
+	margin: 0 0 5px;
+	color: black;
+}
+
+.info p {
+	margin-bottom: 0px;
+}
+
 .toggleAllButton {
   display:inline-block;
   padding:0.35em 1.2em;
