added all colored page elements to assets/style/style.css resolves #41

--- a/poudre-dashboard-ng/src/app/map-components/map.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.css
@@ -123,11 +123,11 @@ header h1 {
 /* Style for sidebar */
 .leaflet-sidebar-tabs > ul 
 > li.active {
-	background-color: #9DB66B !important;
+	background-color: #9DB66B;
 }
 
 .leaflet-sidebar-header {
-	background: #9DB66B !important;
+	background: #9DB66B;
 }
 
 /* Styling for actual slider */
