fixed nav bar issues and height. resolves #42

--- a/poudre-dashboard-ng/src/app/map-components/map.component.css
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.css
@@ -130,6 +130,14 @@ header h1 {
 	background: #9DB66B;
 }
 
+.leaflet-top,
+.leaflet-bottom,
+.leaflet-left,
+.leaflet-right,
+.leaflet-control {
+	z-index:499 !important;
+}
+
 /* Styling for actual slider */
 /* .timeslider{
 	float:left;
