--- a/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-xl navbar-light bg-light py-0">
   <a class="navbar-brand" href=""> Poudre Basin Information</a>
 
   <!-- Hamburger Icon -->
