added component for controlling leaflet basemap layers added to the sidebar

--- a/poudre-dashboard-ng/src/app/map-components/map.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/map.component.html
@@ -44,9 +44,19 @@
 
                   <hr>
 
+                  <h5>Layers: </h5>
                   <table class="layerOptions">
 
-                    <ng-template layer-host></ng-template>
+                    <ng-template map-layer-hook></ng-template>
+
+                  </table>
+
+                  <hr>
+
+                  <h5> Background Layers: </h5>
+                  <table class="layerOptions">
+
+                      <ng-template background-layer-hook></ng-template>
 
                   </table>
 
