added UI changes and made leaflet control configurable

--- a/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.html
+++ b/poudre-dashboard-ng/src/app/map-components/map-layer-control/map-layer.component.html
@@ -7,7 +7,7 @@
 
     </td>
     <td class="toggle">
-      <label class="switch">
+      <label title="Show/hide '{{data.displayName}}' layer on the map"  class="switch">
 
         <input id="{{data.geolayerId}}-slider" type="checkbox" checked (click)="toggleLayer()" checked="checked">
         <span class="slider round"></span>
