stable version of tabs in nav bar, in middle of restructuring tabs

--- a/poudre-dashboard-ng/src/app/nav-bar/nav-dropdown/nav-dropdown.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-dropdown/nav-dropdown.component.html
@@ -1,5 +1,5 @@
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="/map" id="navbarDropdown" role="button" data-toggle="dropdown">
+    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown">
       {{data.name}}
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
