--- a/poudre-dashboard-ng/src/app/nav-bar/nav-dropdown/nav-dropdown-option/nav-dropdown-option.component.html
+++ b/poudre-dashboard-ng/src/app/nav-bar/nav-dropdown/nav-dropdown-option/nav-dropdown-option.component.html
@@ -1,3 +1,3 @@
-  <li class="nav-item activate .ml-auto">
-    <a class="dropdown-item" routerLink="/map/{{data.mapProject}}"><img src="assets/img/baseline-map-24px.svg"/>{{data.name}}</a>
-  </li>
+<li class="nav-item activate .ml-auto">
+  <a class="dropdown-item" routerLink="/generic-page"><img src="assets/img/baseline-map-24px.svg"/>{{data.name}}</a>
+</li>
